<resources>
    <string name="app_name">Elementary</string>

    <string name="invalid_email">Invalid Email</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="username_empty">Username cannot be empty</string>
    <string name="error_registration">Registration failed</string>
    <string name="error_login">Login failed</string>


    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_dot">Sign in.</string>
    <string name="already_registered">Already have an account?</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="recover_dot">Recover.</string>

    <string-array name="tabs_title">
        <item>Task</item>
        <item>Map</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
